# MarchingCubesOpenGL

./: .gitignore  .kateproject  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Run.bat  cmake_install.cmake  compile_and_run.bat
include/: VBOVOA.h  camera.h  lightingShaderStruct.h  movement.h  settings.h  setup.h  shader_s.h  shadersClass.h  stb_image.h  texture.h  vertexBinder.h
include/camera/: camera.h
include/computationStuff/: marching_cubes.h  worldObject.h
include/gameplay_functions/: line_triangle_intersection.h
include/glad/: glad.h
include/world_building/: chunk.h  chunk_object.cpp  chunk_object.h  marching_cubes.cpp
include/world_objects/: baseWorldObject.cpp  baseWorldObject.h  baseWorldObjectClass.h  lightingShaderObject.cpp  lightingShaderObject.h  lightingShaderObjectClass.h
src/: glad.c  main.cpp  marching_cubes.cpp  setup.cpp
